<resources>
    <string name="app_name">Mortgage Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="MonthlyPayment">Monthly Payment:</string>
    <string name="AmountBorrowed">Amount Borrowed:</string>
    <string name="LoanTerm">Loan Term:</string>
    <string name="taxes">Taxes and Insurance per month</string>
    <string name="calculate">Calculate</string>
    <string name="Interest">Interest Rate:</string>
</resources>
